[#2556] Add support for white listing cipher suites
The Hono components now support configuration properties for setting
supported TLS cipher suites. The cipher suites can be configured
separately for both the endpoints exposed by the components as well as
the clients used for accessing service endpoints exposed by other
components.

Fixes #2556

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>